--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
 		</div>
 	</section>
 
-	<section class="section section-editions" id="editions">
+	<section class="section hidden section-editions" id="editions">
 		<div class="container">
 			<div class="editions">
 				<h2 data-text="editions">Editions</h2>
@@ -199,7 +199,7 @@
 		</div>
 	</section>
 
-	<section class="section  section-dual" id="controller">
+	<section class="section hidden section-dual" id="controller">
 		<div class="container">
 			<h2>DualSense</h2>
 
@@ -229,7 +229,7 @@
 		</div>
 	</section>
 
-	<section class="section  section-about" id="about">
+	<section class="section hidden section-about" id="about">
 		<h2>About Game</h2>
 
 		<div class="video">
@@ -243,7 +243,7 @@
 		</div>
 	</section>
 
-	<section class="section  section-explore" id="explore">
+	<section class="section hidden section-explore" id="explore">
 		<div class="container">
 			<h2>Explore the God of War series</h2>
 
@@ -384,7 +384,7 @@
 		</div>
 	</section>
 
-	<section class="section  section-news" id="news">
+	<section class="section hidden section-news" id="news">
 		<h2>News</h2>
 
 		<div class="news swiper flex-center flex">
@@ -533,7 +533,7 @@
 		</div>
 	</section>
 
-	<section class="section  section-faq" id="faq">
+	<section class="section hidden section-faq" id="faq">
 		<div class="container">
 			<h2>FAQ</h2>
 
