--- a/src/index.html
+++ b/src/index.html
@@ -627,8 +627,7 @@
 
 			<div class="footer-year">2022</div>
 			<div class="footer-rights">
-				Developed by
-				<a href="https://www.youtube.com/c/Tomkovich">Tomkovich</a>. All
+				Developed by Taras Leuta. All
 				rights reserved
 			</div>
 		</div>
