erorrs then deploying

--- a/src/index.html
+++ b/src/index.html
@@ -627,7 +627,8 @@
 
 			<div class="footer-year">2022</div>
 			<div class="footer-rights">
-				Developed by Taras Leuta. All
+				Developed by
+				<a href="https://www.youtube.com/c/Tomkovich">Tomkovich</a>. All
 				rights reserved
 			</div>
 		</div>
