--- a/src/index.html
+++ b/src/index.html
@@ -628,7 +628,7 @@
 			<div class="footer-year">2022</div>
 			<div class="footer-rights">
 				Developed by
-				<a href="https://www.youtube.com/c/Tomkovich">Tomkovich</a>. All
+				Taras Leuta. All
 				rights reserved
 			</div>
 		</div>
