--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png" />
 	<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png" />
 	<link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
+	<link rel="stylesheet" type="text/css" href="./styles.scss" />
 </head>
 
 <body>
@@ -689,6 +690,7 @@
 	</div>
 
 	<div class="overlay"></div>
+	<script src="./index.js"></script>
 </body>
 
 </html>
