--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
 
 				<div class="editions-list">
 					<div class="editions-item">
-						<div class="editions-item__img" style="background-image: url(./assets/images/card1.png)"></div>
+						<div class="editions-item__img" style="background-image: url(../src/assets/images/card1.png)"></div>
 
 						<div class="editions-item__title">Standard Edition</div>
 
@@ -158,7 +158,7 @@
 					</div>
 
 					<div class="editions-item">
-						<div class="editions-item__img" style="background-image: url(./assets/images/card1.png)"></div>
+						<div class="editions-item__img" style="background-image: url(../src/assets/images/card1.png)"></div>
 
 						<div class="editions-item__title">Standard Edition</div>
 
@@ -176,7 +176,7 @@
 					</div>
 
 					<div class="editions-item">
-						<div class="editions-item__img" style="background-image: url(./assets/images/card3.png)"></div>
+						<div class="editions-item__img" style="background-image: url(../src/assets/images/card3.png)"></div>
 
 						<div class="editions-item__title">Digital Deluxe Edition</div>
 
@@ -239,7 +239,7 @@
 				<div class="video-btn">play</div>
 			</div>
 
-			<video id="video" src="./assets/images/video.mp4" poster="./assets/images/bg-video.png"></video>
+			<video id="video" src="../src/assets/images/video.mp4" poster="../src/assets/images/bg-video.png"></video>
 		</div>
 	</section>
 
@@ -268,8 +268,8 @@
 
 					<div class="explore-info flex flex-center">
 						<div class="explore-img">
-							<div class="explore-img__wrap" style="background-image: url(./assets/images/bg-card1.png)">
-								<img src="./assets/images/pc.png" alt="" />
+							<div class="explore-img__wrap" style="background-image: url(../src/assets/images/bg-card1.png)">
+								<img src="../src/assets/images/pc.png" alt="" />
 							</div>
 						</div>
 
@@ -335,8 +335,8 @@
 
 					<div class="explore-info flex flex-center reverse">
 						<div class="explore-img">
-							<div class="explore-img__wrap" style="background-image: url(./assets/images/bg-card2.png)">
-								<img src="./assets/images/ps.png" alt="" />
+							<div class="explore-img__wrap" style="background-image: url(../src/assets/images/bg-card2.png)">
+								<img src="../src/assets/images/ps.png" alt="" />
 							</div>
 						</div>
 
@@ -401,7 +401,7 @@
 					</div>
 
 					<div class="news-item__description flex flex-center">
-						<div class="news-item__img" style="background-image: url(./assets/images/news1.png)"></div>
+						<div class="news-item__img" style="background-image: url(../src/assets/images/news1.png)"></div>
 
 						<div class="news-item__text flex">
 							<p>
@@ -432,7 +432,7 @@
 					</div>
 
 					<div class="news-item__description flex flex-center">
-						<div class="news-item__img" style="background-image: url(./assets/images/news2.png)"></div>
+						<div class="news-item__img" style="background-image: url(../src/assets/images/news2.png)"></div>
 
 						<div class="news-item__text flex">
 							<p>
@@ -461,7 +461,7 @@
 					</div>
 
 					<div class="news-item__description flex flex-center">
-						<div class="news-item__img" style="background-image: url(./assets/images/news3.png)"></div>
+						<div class="news-item__img" style="background-image: url(../src/assets/images/news3.png)"></div>
 
 						<div class="news-item__text flex">
 							<p>
@@ -491,7 +491,7 @@
 					</div>
 
 					<div class="news-item__description flex flex-center">
-						<div class="news-item__img" style="background-image: url(./assets/images/news1.png)"></div>
+						<div class="news-item__img" style="background-image: url(../src/assets/images/news1.png)"></div>
 
 						<div class="news-item__text flex">
 							<p>
@@ -622,7 +622,7 @@
 			</div>
 
 			<div class="footer-icon">
-				<img src="./assets/images/ps-logo.png" alt="" />
+				<img src="../src/assets/images/ps-logo.png" alt="" />
 			</div>
 
 			<div class="footer-year">2022</div>
